<resources>
    <string name="global_app_name">MANET Manager</string>
    <string name="global_app_view_log_name">MANET Manager Log</string>
    <string name="global_app_send_message_name">MANET Manager Send Message</string>
    <string name="global_app_view_message_name">MANET Manager View Message</string>
    <string name="global_app_view_routing_info_name">MANET Manager Routing Info</string>
    <string name="global_app_edit_ignore_list_name">MANET Manager Ignore List</string>
    <string name="global_app_share_name">MANET Manager Share App</string>
	<string name="global_app_installed">Binaries and config-files installed!</string>
	<string name="global_app_error_restartsecwifi">Unable to restart secured wifi!</string>
	<string name="global_app_adhoc_running">Ad-Hoc mode is currently running ...</string>
	<string name="global_app_connected">connected</string>
	<string name="global_application_installed">Binaries and config files installed!</string>
	<string name="permission_manet">Allows the application to access the mobile ad-hoc network (MANET) service.</string>
    <string name="main_activity_settings">Settings</string>
    <string name="main_activity_about">About</string>
    <string name="main_activity_send_message">Send Message</string>
    <string name="main_activity_view_routing_info">Routing Info</string>
    <string name="main_activity_donate">Donate</string>
    <string name="main_activity_close">Close</string>
    <string name="main_activity_notroot">Not Root!</string>
    <string name="main_activity_nonetfilter">No Netfilter!</string>
    <string name="main_activity_exit">Exit</string>
    <string name="main_activity_ignore">Ignore</string>
    <string name="main_activity_yes">Yes</string>
    <string name="main_activity_no">No</string>
    <string name="main_activity_ok">OK</string>
    <string name="main_activity_locked">Ad-Hoc mode is locked!</string>
    <string name="main_activity_show_log">Show Log</string>
    <string name="main_activity_share">Share</string>
    <string name="main_activity_start">Start Ad-Hoc Mode</string>
    <string name="main_activity_stop">Stop Ad-Hoc Mode</string>
    <string name="main_activity_connect">Connect MANET Service</string>
    <string name="main_activity_start_summary">Please wait while starting...</string>
    <string name="main_activity_start_errors">Ad-Hoc mode started with errors! Please check \'Show log\'.</string>
    <string name="main_activity_start_unable">Unable to start Ad-Hoc mode. Is your device \'rooted\'?</string>
    <string name="main_activity_start_wiredadhoc_running">Wired ad-hoc seems to be running at the moment. Please disable first!</string>
    <string name="main_activity_start_usbadhoc_running"><![CDATA[USB ad-hoc seems to be running at the moment. Please disable it first: Settings -> Wireless & network setting -> Internet tethering.]]></string>
    <string name="main_activity_start_unknownstate">Your phone is currently in an unknown state - try to reboot!</string>
    <string name="main_activity_stop_summary">Please wait while stopping...</string>
    <string name="main_activity_connect_summary">Please wait while connecting...</string>
    <string name="main_activity_confirm">Confirm</string>
    <string name="main_activity_cancel">Cancel</string>
    <string name="main_layout_presstostart">- Press to start Ad-Hoc mode. -</string>
    <string name="main_layout_presstostop">- Press to stop Ad-Hoc mode. -</string>
    <string name="main_layout_download">Download</string>
    <string name="main_layout_upload">Upload</string>
    <string name="main_layout_lock">Lock</string>
    <string name="main_layout_ip_placeholder">[IP]</string>
    <string name="main_layout_ip">IP: </string>
    <string name="main_layout_ssid_placeholder">[SSID]</string>
    <string name="main_layout_ssid">SSID: </string>
    <string name="setup_activity_reinstall">(Re)-Install binaries/configs</string>
    <string name="setup_activity_restart_adhoc_title">Restart Ad-Hoc Mode</string>
    <string name="setup_activity_restart_adhoc_message">Please wait while restarting...</string>
    <string name="setup_activity_error_password_invalidchars">Password contains invalid characters, not saved!</string>
    <string name="setup_activity_error_password_tooshort">Password too short! New value was not saved.</string>
    <string name="setup_activity_error_password_toolong">Password too long! New value was not saved.</string>
    <string name="setup_activity_error_restart_adhoc">Unable to restart Ad-Hoc mode!</string>
    <string name="setup_activity_error_password_info">Password must be between 8 and 30 characters long!</string>
	<string name="setup_activity_error_password_13chars">Password must be 13 characters (ASCII) long!</string>
	<string name="setup_activity_error_ssid_invalidchars">SSID contains invalid characters</string>
	<string name="setup_activity_error_ssid_empty">New SSID cannot be empty</string>
	<string name="setup_activity_error_ssid_notsaved">, not saved.</string>
	<string name="setup_activity_info_ssid_changedto">SSID changed to </string>
	<string name="setup_activity_info_channel_changedto">Channel changed to </string>
	<string name="setup_activity_info_password_changedto">Password changed to </string>
	<string name="setup_activity_info_txpower_changedto">Transmit power changed to </string>
	<string name="setup_activity_info_ip_changedto">IP changed to </string>
	<string name="setup_activity_bt_warning_title">Warning: Bluetooth</string>
	<string name="setup_activity_bt_warning_ok">OK</string>
	<string name="setup_activity_txpower_warning_title">Warning: Transmit Power</string>
	<string name="setup_activity_txpower_warning_ok">OK</string>
	<string name="setup_layout_category_general">General</string>
	<string name="setup_layout_category_bluetooth">Bluetooth</string>
	<string name="setup_layout_category_wifi">Wifi</string>
	<string name="setup_layout_category_ip">IP</string>
	<string name="setup_layout_category_misc">Miscellaneous</string>
	<string name="setup_layout_category_routing">Routing</string>
	<string name="setup_layout_usebluetooth">Use Bluetooth</string>
	<string name="setup_layout_usebluetooth_summary">Bluetooth PAN ad-hoc instead of WiFi</string>
	<string name="setup_layout_dontdisablewifi">Don\'t disable WiFi</string>
	<string name="setup_layout_dontdisablewifi_summary">Leave WiFi state alone</string>
	<string name="setup_layout_discoverable">Discoverable</string>
	<string name="setup_layout_discoverable_summary">Make device discoverable for 120 seconds on start-up</string>
	<string name="setup_layout_screenon">Keep Screen On</string>
	<string name="setup_layout_screenon_summary">Keep screen on in dimmed state when in ad-hoc mode</string>
	<string name="setup_layout_encryption_algorithm">Encryption algorithm</string>
	<string name="setup_layout_encryption_algorithm_summary">Change wifi encryption algorithm</string>
	<string name="setup_layout_encryption_algorithm_dialog_title">Select Algorithm</string>
	<string name="setup_layout_encryption_setup">Encryption setup method</string>
	<string name="setup_layout_encryption_setup_summary">Change wifi encryption setup method</string>
	<string name="setup_layout_encryption_setup_dialog_title">Select Setup Method</string>
	<string name="setup_layout_password">Password</string>
	<string name="setup_layout_password_summary_wpa">Change password for wifi encryption (WPA/WPA2-PSK)</string>
	<string name="setup_layout_password_summary_wep">Change password for wifi encryption (WEP 128-bit)</string>
	<string name="setup_layout_password_dialog_title">Enter Password</string>
	<string name="setup_layout_ssid">SSID</string>
	<string name="setup_layout_ssid_summary">Change SSID</string>
	<string name="setup_layout_ssid_dialog_title">Enter SSID</string>
	<string name="setup_layout_ssid_dialog_message">Only alpha-numeric characters and \'.\', \'_\' allowed!</string>
	<string name="setup_layout_channel">Channel</string>
	<string name="setup_layout_channel_summary">Change wireless frequency channel</string>
	<string name="setup_layout_channel_dialog_title">Select Channel</string>
	<string name="setup_layout_txpower">Transmit Power</string>
	<string name="setup_layout_txpower_summary">Change transmit power</string>
	<string name="setup_layout_txpower_dialog_title">Select Power Level</string>
	<string name="setup_layout_interface">Wireless Interface</string>
    <string name="setup_layout_interface_summary">Change wireless interface</string>
    <string name="setup_layout_interface_dialog_title">Select Interface</string>
	<string name="setup_layout_ip">IP Address</string>
    <string name="setup_layout_ip_summary">Change static IP address</string>
	<string name="setup_layout_ip_dialog_title">Enter IP Address</string>
	<string name="setup_layout_dns">DNS Server</string>
    <string name="setup_layout_dns_summary">Change DNS server</string>
	<string name="setup_layout_dns_dialog_title">Enter DNS Server Address</string>
	<string name="setup_layout_vibrate">Vibrate on connect</string>
	<string name="setup_layout_ringtone">Notification Ringtone</string>
	<string name="setup_layout_ringtone_summary">Ringtone to use with notifications</string>
	<string name="setup_layout_battery">Battery Temperature</string>
	<string name="setup_layout_battery_summary">Change battery temperature display</string>
	<string name="setup_layout_lockscreen">Disable Screen-Lock</string>
	<string name="setup_layout_lockscreen_summary">Hide the Lockscreen-button</string>
	<string name="setup_layout_ignore">Ignore Neighbor List</string>
	<string name="setup_layout_ignore_summary">Ignore HELLO messages from one-hop neighbors</string>
	<string name="setup_layout_gateway">Gateway</string>
	<string name="setup_layout_gateway_summary">Change gateway settings</string>
	<string name="setup_layout_gateway_dialog_title">Select interface to forward packets to</string>
	<string name="setup_layout_routing_protocol">Routing Protocol</string>
	<string name="setup_layout_routing_protocol_summary">Change routing protocol</string>
	<string name="setup_layout_routing_protocol_dialog_title">Select Routing Protocol</string>
	<string name="setup_layout_uid">User Identifier</string>
	<string name="setup_layout_uid_summary">Change user identifier</string>
	<string name="setup_layout_uid_dialog_title">Enter user identifier</string>
	<string name="about_layout_version">Version:</string>
	<string name="about_layout_general">General:</string>
	<string name="about_layout_projectlinks">Project Links:</string>
	<string name="about_layout_license">License:</string>
	<string name="about_layout_authors">Authors:</string>
	<string name="about_layout_contributors">Contributors:</string>
	<string name="about_layout_software">3rd-Party-Software:</string>
	<string name="clientrow_layout_macaddress">MAC-Address:</string>
	<string name="clientrow_layout_name">Name:</string>
	<string name="clientrow_layout_ipaddress">IP-Address:</string>
	<string name="nonetfilter_layout_line1">Sorry, but your kernel does not have all necessary features for running this application.</string>
	<string name="nonetfilter_layout_line2">Please see our FAQ: http://code.google.com/p/android-wifi-tether/wiki/FAQ</string>
	<string name="noroot_layout_line1">Sorry, but your kernel does not have all necessary features for running this application.</string>
	<string name="update_layout_line1">There is an update available!</string>
	<string name="update_layout_line2">Do you want to install this update now?</string>
	<string name="bt_warning_line1">Our method of bluetooth ad-hoc (PAN) is known to not work on every device/android-platform.</string>
	<string name="bt_warning_line2">This functionality might not work on your device!</string>
	<string name="txpower_warning_line1">The ability reducing the wifi-transmit power depends on the wifi-chip.</string>
	<string name="txpower_warning_line2">This functionality might not work on your device!</string>
</resources>